<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.prueba.tinyshopapp.ui.viewmodel.home.HomeViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:title="@string/app_name"
            app:titleTextColor="?attr/colorOnPrimary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_normal"
            tools:context=".ui.view.HomeFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/no_customers"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showOnlyWhenEmpty="@{viewModel.customers}" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/customers_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="true"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:recyclerViewItemSpacer="@{@dimen/spacing_normal}"
                    tools:itemCount="16"
                    tools:listitem="@layout/customer_list_item" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/add_new_customer"
                    android:onClick="@{()-> viewModel.onFabPressed()}"
                    android:src="@drawable/ic_baseline_add_24" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</layout>
